src/HardScriptParser.py
# Generated from ./src/HardScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HardScriptParser ( Parser ):

    grammarFileName = "HardScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'component'", "'{'", "'}'", "'interface'", 
                     "':'", "'->'", "'('", "','", "')'", "'auto'", "'for'", 
                     "'wire'", "'of'", "'bundle'", "'['", "']'", "'.'", 
                     "'#-'", "'-#'", "'+'", "'-'", "'~'", "'!'", "'**'", 
                     "'*'", "'/'", "'%'", "'>>'", "'<<'", "'>>>'", "'<<<'", 
                     "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&'", 
                     "'^~'", "'~^'", "'^'", "'|'", "'&&'", "'||'", "'::'", 
                     "'<>'", "'<+>'", "'if'", "'then'", "'else'", "'..'", 
                     "'when'", "'in'", "'let'", "'='", "'$'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOLEAN", "BIN_NUMBER", "HEX_NUMBER", 
                      "OCT_NUMBER", "DEC_NUMBER", "UNSIGNED_INTEGER", "ID", 
                      "WHITE_SPACE", "COMMENT" ]

    RULE_design = 0
    RULE_component = 1
    RULE_component_type = 2
    RULE_attributes = 3
    RULE_element = 4
    RULE_explicit_data_element = 5
    RULE_primary_symbol_list = 6
    RULE_expression = 7
    RULE_selector = 8
    RULE_list = 9
    RULE_qualifier = 10
    RULE_iterator = 11
    RULE_binding = 12
    RULE_symbol = 13
    RULE_primary_symbol = 14
    RULE_param_symbol = 15
    RULE_interpolation = 16
    RULE_number = 17

    ruleNames =  [ "design", "component", "component_type", "attributes", 
                   "element", "explicit_data_element", "primary_symbol_list", 
                   "expression", "selector", "list", "qualifier", "iterator", 
                   "binding", "symbol", "primary_symbol", "param_symbol", 
                   "interpolation", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    BOOLEAN=57
    BIN_NUMBER=58
    HEX_NUMBER=59
    OCT_NUMBER=60
    DEC_NUMBER=61
    UNSIGNED_INTEGER=62
    ID=63
    WHITE_SPACE=64
    COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DesignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.ComponentContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.ComponentContext,i)


        def binding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.BindingContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.BindingContext,i)


        def getRuleIndex(self):
            return HardScriptParser.RULE_design

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDesign" ):
                listener.enterDesign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDesign" ):
                listener.exitDesign(self)




    def design(self):

        localctx = HardScriptParser.DesignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_design)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 4]:
                    self.state = 36
                    self.component()
                    pass
                elif token in [54]:
                    self.state = 37
                    self.binding()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398509482002) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.kind = None # Token
            self.type_ = None # ExpressionContext

        def ID(self):
            return self.getToken(HardScriptParser.ID, 0)

        def attributes(self):
            return self.getTypedRuleContext(HardScriptParser.AttributesContext,0)


        def component_type(self):
            return self.getTypedRuleContext(HardScriptParser.Component_typeContext,0)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.ElementContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.ElementContext,i)


        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HardScriptParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)




    def component(self):

        localctx = HardScriptParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_component)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                localctx.kind = self.match(HardScriptParser.T__0)
                self.state = 43
                self.match(HardScriptParser.ID)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 44
                    self.attributes()


                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 47
                    self.component_type()


                self.state = 50
                self.match(HardScriptParser.T__1)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & -125819314573616000) != 0):
                    self.state = 51
                    self.element()
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(HardScriptParser.T__2)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                localctx.kind = self.match(HardScriptParser.T__3)
                self.state = 59
                self.match(HardScriptParser.ID)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 60
                    self.attributes()


                self.state = 63
                self.match(HardScriptParser.T__4)
                self.state = 64
                localctx.type_ = self.expression(0)
                self.state = 65
                self.match(HardScriptParser.T__1)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & -125819314573616000) != 0):
                    self.state = 66
                    self.element()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 72
                self.match(HardScriptParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Component_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.from_ = None # ExpressionContext
            self.to = None # ExpressionContext

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.ExpressionContext,i)


        def getRuleIndex(self):
            return HardScriptParser.RULE_component_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent_type" ):
                listener.enterComponent_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent_type" ):
                listener.exitComponent_type(self)




    def component_type(self):

        localctx = HardScriptParser.Component_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_component_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(HardScriptParser.T__4)
            self.state = 77
            localctx.from_ = self.expression(0)
            self.state = 78
            self.match(HardScriptParser.T__5)
            self.state = 79
            localctx.to = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(HardScriptParser.ID)
            else:
                return self.getToken(HardScriptParser.ID, i)

        def getRuleIndex(self):
            return HardScriptParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = HardScriptParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(HardScriptParser.T__6)
            self.state = 82
            self.match(HardScriptParser.ID)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 83
                self.match(HardScriptParser.T__7)
                self.state = 84
                self.match(HardScriptParser.ID)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(HardScriptParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HardScriptParser.RULE_element

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MixedInstantiationContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMixedInstantiation" ):
                listener.enterMixedInstantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMixedInstantiation" ):
                listener.exitMixedInstantiation(self)


    class LoopContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def iterator(self):
            return self.getTypedRuleContext(HardScriptParser.IteratorContext,0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.ElementContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.ElementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)


    class BindingStatementContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def binding(self):
            return self.getTypedRuleContext(HardScriptParser.BindingContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindingStatement" ):
                listener.enterBindingStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindingStatement" ):
                listener.exitBindingStatement(self)


    class DataInstantiationContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def explicit_data_element(self):
            return self.getTypedRuleContext(HardScriptParser.Explicit_data_elementContext,0)

        def primary_symbol_list(self):
            return self.getTypedRuleContext(HardScriptParser.Primary_symbol_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataInstantiation" ):
                listener.enterDataInstantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataInstantiation" ):
                listener.exitDataInstantiation(self)


    class ComponentInstantiationContext(ElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentInstantiation" ):
                listener.enterComponentInstantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentInstantiation" ):
                listener.exitComponentInstantiation(self)



    def element(self):

        localctx = HardScriptParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = HardScriptParser.BindingStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.binding()
                pass

            elif la_ == 2:
                localctx = HardScriptParser.DataInstantiationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.explicit_data_element()
                pass

            elif la_ == 3:
                localctx = HardScriptParser.DataInstantiationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.match(HardScriptParser.T__9)
                self.state = 95
                self.primary_symbol_list()
                pass

            elif la_ == 4:
                localctx = HardScriptParser.MixedInstantiationContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(HardScriptParser.T__9)
                self.state = 97
                self.expression(0)
                pass

            elif la_ == 5:
                localctx = HardScriptParser.ComponentInstantiationContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.expression(0)
                pass

            elif la_ == 6:
                localctx = HardScriptParser.LoopContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.match(HardScriptParser.T__10)
                self.state = 100
                self.match(HardScriptParser.T__6)
                self.state = 101
                self.iterator()
                self.state = 102
                self.match(HardScriptParser.T__8)
                self.state = 103
                self.match(HardScriptParser.T__1)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & -125819314573616000) != 0):
                    self.state = 104
                    self.element()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self.match(HardScriptParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Explicit_data_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.kind = None # Token
            self.type_ = None # SymbolContext

        def primary_symbol_list(self):
            return self.getTypedRuleContext(HardScriptParser.Primary_symbol_listContext,0)


        def symbol(self):
            return self.getTypedRuleContext(HardScriptParser.SymbolContext,0)


        def getRuleIndex(self):
            return HardScriptParser.RULE_explicit_data_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplicit_data_element" ):
                listener.enterExplicit_data_element(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplicit_data_element" ):
                listener.exitExplicit_data_element(self)




    def explicit_data_element(self):

        localctx = HardScriptParser.Explicit_data_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_explicit_data_element)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                localctx.kind = self.match(HardScriptParser.T__11)
                self.state = 115
                self.primary_symbol_list()
                self.state = 116
                self.match(HardScriptParser.T__12)
                self.state = 117
                localctx.type_ = self.symbol()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                localctx.kind = self.match(HardScriptParser.T__13)
                self.state = 120
                self.primary_symbol_list()
                self.state = 121
                self.match(HardScriptParser.T__12)
                self.state = 122
                localctx.type_ = self.symbol()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primary_symbol_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_symbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.Primary_symbolContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.Primary_symbolContext,i)


        def getRuleIndex(self):
            return HardScriptParser.RULE_primary_symbol_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary_symbol_list" ):
                listener.enterPrimary_symbol_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary_symbol_list" ):
                listener.exitPrimary_symbol_list(self)




    def primary_symbol_list(self):

        localctx = HardScriptParser.Primary_symbol_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primary_symbol_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.primary_symbol()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 127
                self.match(HardScriptParser.T__7)
                self.state = 128
                self.primary_symbol()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HardScriptParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AccessExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)

        def selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.SelectorContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.SelectorContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessExpr" ):
                listener.enterAccessExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessExpr" ):
                listener.exitAccessExpr(self)


    class NumberExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(HardScriptParser.NumberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)


    class BinaryExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.lhs = None # ExpressionContext
            self.op = None # Token
            self.rhs = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryExpr" ):
                listener.enterBinaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryExpr" ):
                listener.exitBinaryExpr(self)


    class SymbolExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def symbol(self):
            return self.getTypedRuleContext(HardScriptParser.SymbolContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbolExpr" ):
                listener.enterSymbolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbolExpr" ):
                listener.exitSymbolExpr(self)


    class ListExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def list_(self):
            return self.getTypedRuleContext(HardScriptParser.ListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpr" ):
                listener.enterListExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpr" ):
                listener.exitListExpr(self)


    class FieldExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)

        def primary_symbol(self):
            return self.getTypedRuleContext(HardScriptParser.Primary_symbolContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldExpr" ):
                listener.enterFieldExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldExpr" ):
                listener.exitFieldExpr(self)


    class ConditionalExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.cond = None # ExpressionContext
            self.thenBranch = None # ExpressionContext
            self.elseBranch = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HardScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HardScriptParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalExpr" ):
                listener.enterConditionalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalExpr" ):
                listener.exitConditionalExpr(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)


    class UnaryExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HardScriptParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(HardScriptParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpr" ):
                listener.enterUnaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpr" ):
                listener.exitUnaryExpr(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HardScriptParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [63]:
                localctx = HardScriptParser.SymbolExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
